Replace null values in 'name' column

--- a/1SA Final Project Airbnb.ipynb
+++ b/1SA Final Project Airbnb.ipynb
@@ -570,7 +570,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "name                              28\nhost_id                            0\nneighbourhood                      0\nlatitude                           0\nlongitude                          0\nroom_type                          0\nprice                              0\nminimum_nights                     0\nnumber_of_reviews                  0\nreviews_per_month                  0\ncalculated_host_listings_count     0\navailability_365                   0\ncity                               0\ndtype: int64"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking null values left\n",
+    "df.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       name    host_id      neighbourhood  latitude  longitude  \\\n23691   NaN  305261435      Pompano Beach  26.28332  -80.10731   \n81872   NaN  114871749           Pasadena  34.17216 -118.11699   \n93004   NaN  141228320      Santa Clarita  34.41328 -118.44301   \n119475  NaN    6676776  Battery Park City  40.71239  -74.01620   \n120149  NaN   11395220       East Village  40.73215  -73.98821   \n\n              room_type  price  minimum_nights  number_of_reviews  \\\n23691   Entire home/apt     79               2                 16   \n81872      Private room    125               2                  0   \n93004      Private room     40               1                 10   \n119475  Entire home/apt    400            1000                  0   \n120149  Entire home/apt    200               1                 28   \n\n        reviews_per_month  calculated_host_listings_count  availability_365  \\\n23691                2.23                               2               136   \n81872                0.00                               1               179   \n93004                0.64                               1               129   \n119475               0.00                               1               362   \n120149               0.37                               1               364   \n\n                  city  \n23691   Broward County  \n81872      Los Angeles  \n93004      Los Angeles  \n119475   New York City  \n120149   New York City  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>host_id</th>\n      <th>neighbourhood</th>\n      <th>latitude</th>\n      <th>longitude</th>\n      <th>room_type</th>\n      <th>price</th>\n      <th>minimum_nights</th>\n      <th>number_of_reviews</th>\n      <th>reviews_per_month</th>\n      <th>calculated_host_listings_count</th>\n      <th>availability_365</th>\n      <th>city</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>23691</th>\n      <td>NaN</td>\n      <td>305261435</td>\n      <td>Pompano Beach</td>\n      <td>26.28332</td>\n      <td>-80.10731</td>\n      <td>Entire home/apt</td>\n      <td>79</td>\n      <td>2</td>\n      <td>16</td>\n      <td>2.23</td>\n      <td>2</td>\n      <td>136</td>\n      <td>Broward County</td>\n    </tr>\n    <tr>\n      <th>81872</th>\n      <td>NaN</td>\n      <td>114871749</td>\n      <td>Pasadena</td>\n      <td>34.17216</td>\n      <td>-118.11699</td>\n      <td>Private room</td>\n      <td>125</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0.00</td>\n      <td>1</td>\n      <td>179</td>\n      <td>Los Angeles</td>\n    </tr>\n    <tr>\n      <th>93004</th>\n      <td>NaN</td>\n      <td>141228320</td>\n      <td>Santa Clarita</td>\n      <td>34.41328</td>\n      <td>-118.44301</td>\n      <td>Private room</td>\n      <td>40</td>\n      <td>1</td>\n      <td>10</td>\n      <td>0.64</td>\n      <td>1</td>\n      <td>129</td>\n      <td>Los Angeles</td>\n    </tr>\n    <tr>\n      <th>119475</th>\n      <td>NaN</td>\n      <td>6676776</td>\n      <td>Battery Park City</td>\n      <td>40.71239</td>\n      <td>-74.01620</td>\n      <td>Entire home/apt</td>\n      <td>400</td>\n      <td>1000</td>\n      <td>0</td>\n      <td>0.00</td>\n      <td>1</td>\n      <td>362</td>\n      <td>New York City</td>\n    </tr>\n    <tr>\n      <th>120149</th>\n      <td>NaN</td>\n      <td>11395220</td>\n      <td>East Village</td>\n      <td>40.73215</td>\n      <td>-73.98821</td>\n      <td>Entire home/apt</td>\n      <td>200</td>\n      <td>1</td>\n      <td>28</td>\n      <td>0.37</td>\n      <td>1</td>\n      <td>364</td>\n      <td>New York City</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# new DataFrame with the instances that have NaN in the 'name' column\n",
+    "df1 = df[df.isna().any(axis=1)]\n",
+    "df1.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "New York City        18\nTwin Cities MSA       5\nLos Angeles           2\nSan Clara Country     1\nBroward County        1\nWashington D.C.       1\nName: city, dtype: int64"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# examining the null values according to cities\n",
+    "df1['city'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The 'name' column is irrelevant for research, so it can be changed in order to keep the data."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replacing null values in 'name' column with 'Unnamed'\n",
+    "df.fillna({'name': 'Unnamed'}, inplace=True)\n",
+    "# examining changes\n",
+    "df['name'].isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
