Add Visualization of the Data Section

--- a/1SA Final Project Airbnb.ipynb
+++ b/1SA Final Project Airbnb.ipynb
@@ -624,7 +624,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "New York City        18\nTwin Cities MSA       5\nLos Angeles           2\nSan Clara Country     1\nBroward County        1\nWashington D.C.       1\nName: city, dtype: int64"
+      "text/plain": "New York City        18\nTwin Cities MSA       5\nLos Angeles           2\nBroward County        1\nSan Clara Country     1\nWashington D.C.       1\nName: city, dtype: int64"
      },
      "execution_count": 19,
      "metadata": {},
@@ -677,6 +677,19 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 4. Visualization of the Data\n",
+    "##### *The motivation for this section is to gain more insights.*"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
