Add state column

--- a/1SA Final Project Airbnb.ipynb
+++ b/1SA Final Project Airbnb.ipynb
@@ -624,7 +624,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "New York City        18\nTwin Cities MSA       5\nLos Angeles           2\nBroward County        1\nSan Clara Country     1\nWashington D.C.       1\nName: city, dtype: int64"
+      "text/plain": "New York City        18\nTwin Cities MSA       5\nLos Angeles           2\nWashington D.C.       1\nBroward County        1\nSan Clara Country     1\nName: city, dtype: int64"
      },
      "execution_count": 19,
      "metadata": {},
@@ -694,10 +694,214 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Cities According to States:\n",
+    "\n",
+    "|State|Abbreviation|City (listed in DF)|\n",
+    "|:------:|:------:|:------:|\n",
+    "|California    |CA    | Los Angles |\n",
+    "|California    |CA    | Oakland |\n",
+    "|California    |CA    | Pacific Grove |\n",
+    "|California    |CA    | San Clara Country |\n",
+    "|California    |CA    | San Diego |\n",
+    "|California    |CA    | San Francisco |\n",
+    "|California    |CA    | San Mateo County |\n",
+    "|California    |CA    | Santa Cruz County |\n",
+    "|Colorado    |CO     | Denver    |\n",
+    "|District of Columbia   |DC     |Washington D.C.     |\n",
+    "|Florida    |FL   |Broward County    |\n",
+    "|Hawaii    |HI     |Hawaii     |\n",
+    "|Illinois    |IL     |Chicago     |\n",
+    "|Louisiana    |LA    |New Orleans     |\n",
+    "|Massachusetts    |MA     |Boston     |\n",
+    "|Massachusetts    |MA     |Cambridge     |\n",
+    "|Massachusetts    |MA     |Salem     |\n",
+    "|Minnesota     |MN     |Twin Cities MSA     |\n",
+    "|Nevada    |NV    |Clark County     |\n",
+    "|New Jersey     |NJ     |Jersey City     |\n",
+    "|New York     |NY     |New York City     |\n",
+    "|North Carolina     |NC     |Asheville     |\n",
+    "|Ohio    |OH     |Columbus     |\n",
+    "|Oregon     |OR     |Portland     |\n",
+    "|Rhode Island     |RI     |Rhode Island     |\n",
+    "|Tennessee     |TN     |Nashville     |\n",
+    "|Texas     |TX     |Austin     |\n",
+    "|Washington    |WA     |Seattle     |"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# deep copy of DataFrame\n",
+    "df2 = df.copy()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "# adding state column to DataFrame\n",
+    "state = {\n",
+    "    \"Los Angeles\": 'CA',\n",
+    "    \"Oakland\": 'CA',\n",
+    "    \"Pacific Grove\": 'CA',\n",
+    "    \"San Clara Country\": 'CA',\n",
+    "    \"San Diego\": 'CA',\n",
+    "    \"San Francisco\": 'CA',\n",
+    "    \"San Mateo County\": 'CA',\n",
+    "    \"Santa Cruz County\": 'CA',\n",
+    "\n",
+    "    \"Denver\": 'CO',\n",
+    "\n",
+    "    \"Washington D.C.\": 'DC',\n",
+    "\n",
+    "    \"Broward County\": 'FL',\n",
+    "\n",
+    "    \"Hawaii\": 'HI',\n",
+    "\n",
+    "    \"Chicago\": 'IL',\n",
+    "\n",
+    "    \"New Orleans\": 'LA',\n",
+    "\n",
+    "    \"Boston\": 'MA',\n",
+    "    \"Cambridge\": 'MA',\n",
+    "    \"Salem\": 'MA',\n",
+    "\n",
+    "    \"Twin Cities MSA\": 'MN',\n",
+    "\n",
+    "    \"Clark County\": 'NV',\n",
+    "\n",
+    "    \"Jersey City\": 'NJ',\n",
+    "\n",
+    "    \"New York City\": 'NY',\n",
+    "\n",
+    "    \"Asheville\": 'NC',\n",
+    "\n",
+    "    \"Columbus\": 'OH',\n",
+    "\n",
+    "    \"Portland\": 'OR',\n",
+    "\n",
+    "    \"Rhode Island\": 'RI',\n",
+    "\n",
+    "    \"Nashville\": 'TN',\n",
+    "\n",
+    "    \"Austin\": 'TX',\n",
+    "\n",
+    "    \"Seattle\": 'WA'\n",
+    "}\n",
+    "\n",
+    "df2['state'] = df2['city'].map(state)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# making sure state abbreviation was added to every instance\n",
+    "df2['state'].isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                name  host_id neighbourhood  \\\n0    Charming Victorian home - twin beds + breakfast   165529         28804   \n1                                   French Chic Loft   427027         28801   \n2  Walk to stores/parks/downtown. Fenced yard/Pet...   320564         28801   \n\n   latitude  longitude        room_type  price  minimum_nights  \\\n0  35.65146  -82.62792     Private room     60               1   \n1  35.59779  -82.55540  Entire home/apt    470               1   \n2  35.60670  -82.55563  Entire home/apt     75              30   \n\n   number_of_reviews  reviews_per_month  calculated_host_listings_count  \\\n0                138               1.14                               1   \n1                114               1.03                              11   \n2                 89               0.81                               2   \n\n   availability_365       city state  \n0                 0  Asheville    NC  \n1               288  Asheville    NC  \n2               298  Asheville    NC  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>host_id</th>\n      <th>neighbourhood</th>\n      <th>latitude</th>\n      <th>longitude</th>\n      <th>room_type</th>\n      <th>price</th>\n      <th>minimum_nights</th>\n      <th>number_of_reviews</th>\n      <th>reviews_per_month</th>\n      <th>calculated_host_listings_count</th>\n      <th>availability_365</th>\n      <th>city</th>\n      <th>state</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Charming Victorian home - twin beds + breakfast</td>\n      <td>165529</td>\n      <td>28804</td>\n      <td>35.65146</td>\n      <td>-82.62792</td>\n      <td>Private room</td>\n      <td>60</td>\n      <td>1</td>\n      <td>138</td>\n      <td>1.14</td>\n      <td>1</td>\n      <td>0</td>\n      <td>Asheville</td>\n      <td>NC</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>French Chic Loft</td>\n      <td>427027</td>\n      <td>28801</td>\n      <td>35.59779</td>\n      <td>-82.55540</td>\n      <td>Entire home/apt</td>\n      <td>470</td>\n      <td>1</td>\n      <td>114</td>\n      <td>1.03</td>\n      <td>11</td>\n      <td>288</td>\n      <td>Asheville</td>\n      <td>NC</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Walk to stores/parks/downtown. Fenced yard/Pet...</td>\n      <td>320564</td>\n      <td>28801</td>\n      <td>35.60670</td>\n      <td>-82.55563</td>\n      <td>Entire home/apt</td>\n      <td>75</td>\n      <td>30</td>\n      <td>89</td>\n      <td>0.81</td>\n      <td>2</td>\n      <td>298</td>\n      <td>Asheville</td>\n      <td>NC</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# examining the changes\n",
+    "df2.head(3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "CA    65893\nNY    45756\nHI    22434\nFL    10858\nTX    10436\nNV     8408\nDC     7350\nWA     6575\nMN     6470\nLA     6408\nIL     6397\nTN     6139\nMA     4570\nOR     4281\nCO     4200\nRI     3884\nNJ     2488\nNC     2074\nOH     1409\nName: state, dtype: int64"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['state'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The state column presents a new insight. When counting values by cities, it seems that New York has\n",
+    "more listings. By counting values according to states we can notice that most listings are\n",
+    "actually in California.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
