Change state label to categories by number

--- a/1SA Final Project Airbnb.ipynb
+++ b/1SA Final Project Airbnb.ipynb
@@ -624,7 +624,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "New York City        18\nTwin Cities MSA       5\nLos Angeles           2\nWashington D.C.       1\nBroward County        1\nSan Clara Country     1\nName: city, dtype: int64"
+      "text/plain": "New York City        18\nTwin Cities MSA       5\nLos Angeles           2\nSan Clara Country     1\nBroward County        1\nWashington D.C.       1\nName: city, dtype: int64"
      },
      "execution_count": 19,
      "metadata": {},
@@ -698,36 +698,36 @@
    "source": [
     "### Cities According to States:\n",
     "\n",
-    "|State|Abbreviation|City (listed in DF)|\n",
-    "|:------:|:------:|:------:|\n",
-    "|California    |CA    | Los Angles |\n",
-    "|California    |CA    | Oakland |\n",
-    "|California    |CA    | Pacific Grove |\n",
-    "|California    |CA    | San Clara Country |\n",
-    "|California    |CA    | San Diego |\n",
-    "|California    |CA    | San Francisco |\n",
-    "|California    |CA    | San Mateo County |\n",
-    "|California    |CA    | Santa Cruz County |\n",
-    "|Colorado    |CO     | Denver    |\n",
-    "|District of Columbia   |DC     |Washington D.C.     |\n",
-    "|Florida    |FL   |Broward County    |\n",
-    "|Hawaii    |HI     |Hawaii     |\n",
-    "|Illinois    |IL     |Chicago     |\n",
-    "|Louisiana    |LA    |New Orleans     |\n",
-    "|Massachusetts    |MA     |Boston     |\n",
-    "|Massachusetts    |MA     |Cambridge     |\n",
-    "|Massachusetts    |MA     |Salem     |\n",
-    "|Minnesota     |MN     |Twin Cities MSA     |\n",
-    "|Nevada    |NV    |Clark County     |\n",
-    "|New Jersey     |NJ     |Jersey City     |\n",
-    "|New York     |NY     |New York City     |\n",
-    "|North Carolina     |NC     |Asheville     |\n",
-    "|Ohio    |OH     |Columbus     |\n",
-    "|Oregon     |OR     |Portland     |\n",
-    "|Rhode Island     |RI     |Rhode Island     |\n",
-    "|Tennessee     |TN     |Nashville     |\n",
-    "|Texas     |TX     |Austin     |\n",
-    "|Washington    |WA     |Seattle     |"
+    "|Category Number|State|Abbreviation|City (listed in DF)|\n",
+    "|:------:|:------:|:------:|:------:|\n",
+    "|**1**|California    |CA    | Los Angles |\n",
+    "|**1**|California    |CA    | Oakland |\n",
+    "|**1**|California    |CA    | Pacific Grove |\n",
+    "|**1**|California    |CA    | San Clara Country |\n",
+    "|**1**|California    |CA    | San Diego |\n",
+    "|**1**|California    |CA    | San Francisco |\n",
+    "|**1**|California    |CA    | San Mateo County |\n",
+    "|**1**|California    |CA    | Santa Cruz County |\n",
+    "|**2**|Colorado    |CO     | Denver    |\n",
+    "|**3**|District of Columbia   |DC     |Washington D.C.     |\n",
+    "|**4**|Florida    |FL   |Broward County    |\n",
+    "|**5**|Hawaii    |HI     |Hawaii     |\n",
+    "|**6**|Illinois    |IL     |Chicago     |\n",
+    "|**7**|Louisiana    |LA    |New Orleans     |\n",
+    "|**8**|Massachusetts    |MA     |Boston     |\n",
+    "|**8**|Massachusetts    |MA     |Cambridge     |\n",
+    "|**8**|Massachusetts    |MA     |Salem     |\n",
+    "|**9**|Minnesota     |MN     |Twin Cities MSA     |\n",
+    "|**10**|Nevada    |NV    |Clark County     |\n",
+    "|**11**|New Jersey     |NJ     |Jersey City     |\n",
+    "|**12**|New York     |NY     |New York City     |\n",
+    "|**13**|North Carolina     |NC     |Asheville     |\n",
+    "|**14**|Ohio    |OH     |Columbus     |\n",
+    "|**15**|Oregon     |OR     |Portland     |\n",
+    "|**16**|Rhode Island     |RI     |Rhode Island     |\n",
+    "|**17**|Tennessee     |TN     |Nashville     |\n",
+    "|**18**|Texas     |TX     |Austin     |\n",
+    "|**19**|Washington    |WA     |Seattle     |"
    ],
    "metadata": {
     "collapsed": false
@@ -755,52 +755,52 @@
    "source": [
     "# adding state column to DataFrame\n",
     "state = {\n",
-    "    \"Los Angeles\": 'CA',\n",
-    "    \"Oakland\": 'CA',\n",
-    "    \"Pacific Grove\": 'CA',\n",
-    "    \"San Clara Country\": 'CA',\n",
-    "    \"San Diego\": 'CA',\n",
-    "    \"San Francisco\": 'CA',\n",
-    "    \"San Mateo County\": 'CA',\n",
-    "    \"Santa Cruz County\": 'CA',\n",
+    "    \"Los Angeles\": 1,\n",
+    "    \"Oakland\": 1,\n",
+    "    \"Pacific Grove\": 1,\n",
+    "    \"San Clara Country\": 1,\n",
+    "    \"San Diego\": 1,\n",
+    "    \"San Francisco\": 1,\n",
+    "    \"San Mateo County\": 1,\n",
+    "    \"Santa Cruz County\": 1,\n",
     "\n",
-    "    \"Denver\": 'CO',\n",
+    "    \"Denver\": 2,\n",
     "\n",
-    "    \"Washington D.C.\": 'DC',\n",
+    "    \"Washington D.C.\": 3,\n",
     "\n",
-    "    \"Broward County\": 'FL',\n",
+    "    \"Broward County\": 4,\n",
     "\n",
-    "    \"Hawaii\": 'HI',\n",
+    "    \"Hawaii\": 5,\n",
     "\n",
-    "    \"Chicago\": 'IL',\n",
+    "    \"Chicago\": 6,\n",
     "\n",
-    "    \"New Orleans\": 'LA',\n",
+    "    \"New Orleans\": 7,\n",
     "\n",
-    "    \"Boston\": 'MA',\n",
-    "    \"Cambridge\": 'MA',\n",
-    "    \"Salem\": 'MA',\n",
+    "    \"Boston\": 8,\n",
+    "    \"Cambridge\": 8,\n",
+    "    \"Salem\": 8,\n",
     "\n",
-    "    \"Twin Cities MSA\": 'MN',\n",
+    "    \"Twin Cities MSA\": 9,\n",
     "\n",
-    "    \"Clark County\": 'NV',\n",
+    "    \"Clark County\": 10,\n",
     "\n",
-    "    \"Jersey City\": 'NJ',\n",
+    "    \"Jersey City\": 11,\n",
     "\n",
-    "    \"New York City\": 'NY',\n",
+    "    \"New York City\": 12,\n",
     "\n",
-    "    \"Asheville\": 'NC',\n",
+    "    \"Asheville\": 13,\n",
     "\n",
-    "    \"Columbus\": 'OH',\n",
+    "    \"Columbus\": 14,\n",
     "\n",
-    "    \"Portland\": 'OR',\n",
+    "    \"Portland\": 15,\n",
     "\n",
-    "    \"Rhode Island\": 'RI',\n",
+    "    \"Rhode Island\": 16,\n",
     "\n",
-    "    \"Nashville\": 'TN',\n",
+    "    \"Nashville\": 17,\n",
     "\n",
-    "    \"Austin\": 'TX',\n",
+    "    \"Austin\": 18,\n",
     "\n",
-    "    \"Seattle\": 'WA'\n",
+    "    \"Seattle\": 19\n",
     "}\n",
     "\n",
     "df2['state'] = df2['city'].map(state)"
@@ -842,8 +842,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "                                                name  host_id neighbourhood  \\\n0    Charming Victorian home - twin beds + breakfast   165529         28804   \n1                                   French Chic Loft   427027         28801   \n2  Walk to stores/parks/downtown. Fenced yard/Pet...   320564         28801   \n\n   latitude  longitude        room_type  price  minimum_nights  \\\n0  35.65146  -82.62792     Private room     60               1   \n1  35.59779  -82.55540  Entire home/apt    470               1   \n2  35.60670  -82.55563  Entire home/apt     75              30   \n\n   number_of_reviews  reviews_per_month  calculated_host_listings_count  \\\n0                138               1.14                               1   \n1                114               1.03                              11   \n2                 89               0.81                               2   \n\n   availability_365       city state  \n0                 0  Asheville    NC  \n1               288  Asheville    NC  \n2               298  Asheville    NC  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>host_id</th>\n      <th>neighbourhood</th>\n      <th>latitude</th>\n      <th>longitude</th>\n      <th>room_type</th>\n      <th>price</th>\n      <th>minimum_nights</th>\n      <th>number_of_reviews</th>\n      <th>reviews_per_month</th>\n      <th>calculated_host_listings_count</th>\n      <th>availability_365</th>\n      <th>city</th>\n      <th>state</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Charming Victorian home - twin beds + breakfast</td>\n      <td>165529</td>\n      <td>28804</td>\n      <td>35.65146</td>\n      <td>-82.62792</td>\n      <td>Private room</td>\n      <td>60</td>\n      <td>1</td>\n      <td>138</td>\n      <td>1.14</td>\n      <td>1</td>\n      <td>0</td>\n      <td>Asheville</td>\n      <td>NC</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>French Chic Loft</td>\n      <td>427027</td>\n      <td>28801</td>\n      <td>35.59779</td>\n      <td>-82.55540</td>\n      <td>Entire home/apt</td>\n      <td>470</td>\n      <td>1</td>\n      <td>114</td>\n      <td>1.03</td>\n      <td>11</td>\n      <td>288</td>\n      <td>Asheville</td>\n      <td>NC</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Walk to stores/parks/downtown. Fenced yard/Pet...</td>\n      <td>320564</td>\n      <td>28801</td>\n      <td>35.60670</td>\n      <td>-82.55563</td>\n      <td>Entire home/apt</td>\n      <td>75</td>\n      <td>30</td>\n      <td>89</td>\n      <td>0.81</td>\n      <td>2</td>\n      <td>298</td>\n      <td>Asheville</td>\n      <td>NC</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                                                name  host_id neighbourhood  \\\n0    Charming Victorian home - twin beds + breakfast   165529         28804   \n1                                   French Chic Loft   427027         28801   \n2  Walk to stores/parks/downtown. Fenced yard/Pet...   320564         28801   \n\n   latitude  longitude        room_type  price  minimum_nights  \\\n0  35.65146  -82.62792     Private room     60               1   \n1  35.59779  -82.55540  Entire home/apt    470               1   \n2  35.60670  -82.55563  Entire home/apt     75              30   \n\n   number_of_reviews  reviews_per_month  calculated_host_listings_count  \\\n0                138               1.14                               1   \n1                114               1.03                              11   \n2                 89               0.81                               2   \n\n   availability_365       city  state  \n0                 0  Asheville     13  \n1               288  Asheville     13  \n2               298  Asheville     13  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>host_id</th>\n      <th>neighbourhood</th>\n      <th>latitude</th>\n      <th>longitude</th>\n      <th>room_type</th>\n      <th>price</th>\n      <th>minimum_nights</th>\n      <th>number_of_reviews</th>\n      <th>reviews_per_month</th>\n      <th>calculated_host_listings_count</th>\n      <th>availability_365</th>\n      <th>city</th>\n      <th>state</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Charming Victorian home - twin beds + breakfast</td>\n      <td>165529</td>\n      <td>28804</td>\n      <td>35.65146</td>\n      <td>-82.62792</td>\n      <td>Private room</td>\n      <td>60</td>\n      <td>1</td>\n      <td>138</td>\n      <td>1.14</td>\n      <td>1</td>\n      <td>0</td>\n      <td>Asheville</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>French Chic Loft</td>\n      <td>427027</td>\n      <td>28801</td>\n      <td>35.59779</td>\n      <td>-82.55540</td>\n      <td>Entire home/apt</td>\n      <td>470</td>\n      <td>1</td>\n      <td>114</td>\n      <td>1.03</td>\n      <td>11</td>\n      <td>288</td>\n      <td>Asheville</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Walk to stores/parks/downtown. Fenced yard/Pet...</td>\n      <td>320564</td>\n      <td>28801</td>\n      <td>35.60670</td>\n      <td>-82.55563</td>\n      <td>Entire home/apt</td>\n      <td>75</td>\n      <td>30</td>\n      <td>89</td>\n      <td>0.81</td>\n      <td>2</td>\n      <td>298</td>\n      <td>Asheville</td>\n      <td>13</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 24,
      "metadata": {},
@@ -867,7 +867,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "CA    65893\nNY    45756\nHI    22434\nFL    10858\nTX    10436\nNV     8408\nDC     7350\nWA     6575\nMN     6470\nLA     6408\nIL     6397\nTN     6139\nMA     4570\nOR     4281\nCO     4200\nRI     3884\nNJ     2488\nNC     2074\nOH     1409\nName: state, dtype: int64"
+      "text/plain": "1     65893\n12    45756\n5     22434\n4     10858\n18    10436\n10     8408\n3      7350\n19     6575\n9      6470\n7      6408\n6      6397\n17     6139\n8      4570\n15     4281\n2      4200\n16     3884\n11     2488\n13     2074\n14     1409\nName: state, dtype: int64"
      },
      "execution_count": 25,
      "metadata": {},
@@ -889,19 +889,20 @@
    "source": [
     "The state column presents a new insight. When counting values by cities, it seems that New York has\n",
     "more listings. By counting values according to states we can notice that most listings are\n",
-    "actually in California.\n"
+    "actually in California."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "outputs": [],
-   "source": [
-    "\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
