Add Cleaning the Data Section

--- a/1SA Final Project US Superstore.ipynb
+++ b/1SA Final Project US Superstore.ipynb
@@ -213,14 +213,15 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "## 3. Cleaning the Data:\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   }
