--- a/1SA Final Project US Superstore.ipynb
+++ b/1SA Final Project US Superstore.ipynb
@@ -226,7 +226,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "# creating a deep copy of the DataFrame\n",
+    "# current changes will be made on the copied version\n",
+    "df1 = df.copy()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([   1,    2,    3, ..., 9992, 9993, 9994], dtype=int64)"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking if the 'Row ID' matched the number of instances\n",
+    "df1['Row ID'].unique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "# setting 'Row ID' as DataFrame index\n",
+    "df1.set_index(['Row ID'], inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -263,30 +318,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
-   "source": [
-    "# creating a deep copy of the DataFrame\n",
-    "# current changes will be made on the copied version\n",
-    "df1 = df.copy()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "   Row ID        Order ID Order Date   Ship Date     Ship Mode Customer ID  \\\n0       1  CA-2016-152156  11/8/2016  11/11/2016  Second Class    CG-12520   \n1       2  CA-2016-152156  11/8/2016  11/11/2016  Second Class    CG-12520   \n2       3  CA-2016-138688  6/12/2016   6/16/2016  Second Class    DV-13045   \n\n     Customer Name    Segment         City       State  Postal Code Region  \\\n0      Claire Gute   Consumer    Henderson    Kentucky        42420  South   \n1      Claire Gute   Consumer    Henderson    Kentucky        42420  South   \n2  Darrin Van Huff  Corporate  Los Angeles  California        90036   West   \n\n        Product ID         Category Sub-Category  \\\n0  FUR-BO-10001798        Furniture    Bookcases   \n1  FUR-CH-10000454        Furniture       Chairs   \n2  OFF-LA-10000240  Office Supplies       Labels   \n\n                                        Product Name   Sales  Quantity  \\\n0                  Bush Somerset Collection Bookcase  261.96         2   \n1  Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.94         3   \n2  Self-Adhesive Address Labels for Typewriters b...   14.62         2   \n\n   Discount    Profit  \n0       0.0   41.9136  \n1       0.0  219.5820  \n2       0.0    6.8714  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Row ID</th>\n      <th>Order ID</th>\n      <th>Order Date</th>\n      <th>Ship Date</th>\n      <th>Ship Mode</th>\n      <th>Customer ID</th>\n      <th>Customer Name</th>\n      <th>Segment</th>\n      <th>City</th>\n      <th>State</th>\n      <th>Postal Code</th>\n      <th>Region</th>\n      <th>Product ID</th>\n      <th>Category</th>\n      <th>Sub-Category</th>\n      <th>Product Name</th>\n      <th>Sales</th>\n      <th>Quantity</th>\n      <th>Discount</th>\n      <th>Profit</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>CA-2016-152156</td>\n      <td>11/8/2016</td>\n      <td>11/11/2016</td>\n      <td>Second Class</td>\n      <td>CG-12520</td>\n      <td>Claire Gute</td>\n      <td>Consumer</td>\n      <td>Henderson</td>\n      <td>Kentucky</td>\n      <td>42420</td>\n      <td>South</td>\n      <td>FUR-BO-10001798</td>\n      <td>Furniture</td>\n      <td>Bookcases</td>\n      <td>Bush Somerset Collection Bookcase</td>\n      <td>261.96</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>41.9136</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>CA-2016-152156</td>\n      <td>11/8/2016</td>\n      <td>11/11/2016</td>\n      <td>Second Class</td>\n      <td>CG-12520</td>\n      <td>Claire Gute</td>\n      <td>Consumer</td>\n      <td>Henderson</td>\n      <td>Kentucky</td>\n      <td>42420</td>\n      <td>South</td>\n      <td>FUR-CH-10000454</td>\n      <td>Furniture</td>\n      <td>Chairs</td>\n      <td>Hon Deluxe Fabric Upholstered Stacking Chairs,...</td>\n      <td>731.94</td>\n      <td>3</td>\n      <td>0.0</td>\n      <td>219.5820</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>CA-2016-138688</td>\n      <td>6/12/2016</td>\n      <td>6/16/2016</td>\n      <td>Second Class</td>\n      <td>DV-13045</td>\n      <td>Darrin Van Huff</td>\n      <td>Corporate</td>\n      <td>Los Angeles</td>\n      <td>California</td>\n      <td>90036</td>\n      <td>West</td>\n      <td>OFF-LA-10000240</td>\n      <td>Office Supplies</td>\n      <td>Labels</td>\n      <td>Self-Adhesive Address Labels for Typewriters b...</td>\n      <td>14.62</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>6.8714</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "              Order ID Order Date   Ship Date     Ship Mode Customer ID  \\\nRow ID                                                                    \n1       CA-2016-152156  11/8/2016  11/11/2016  Second Class    CG-12520   \n2       CA-2016-152156  11/8/2016  11/11/2016  Second Class    CG-12520   \n3       CA-2016-138688  6/12/2016   6/16/2016  Second Class    DV-13045   \n\n          Customer Name    Segment         City       State  Postal Code  \\\nRow ID                                                                     \n1           Claire Gute   Consumer    Henderson    Kentucky        42420   \n2           Claire Gute   Consumer    Henderson    Kentucky        42420   \n3       Darrin Van Huff  Corporate  Los Angeles  California        90036   \n\n       Region       Product ID         Category Sub-Category  \\\nRow ID                                                         \n1       South  FUR-BO-10001798        Furniture    Bookcases   \n2       South  FUR-CH-10000454        Furniture       Chairs   \n3        West  OFF-LA-10000240  Office Supplies       Labels   \n\n                                             Product Name   Sales  Quantity  \\\nRow ID                                                                        \n1                       Bush Somerset Collection Bookcase  261.96         2   \n2       Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.94         3   \n3       Self-Adhesive Address Labels for Typewriters b...   14.62         2   \n\n        Discount    Profit  \nRow ID                      \n1            0.0   41.9136  \n2            0.0  219.5820  \n3            0.0    6.8714  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Order ID</th>\n      <th>Order Date</th>\n      <th>Ship Date</th>\n      <th>Ship Mode</th>\n      <th>Customer ID</th>\n      <th>Customer Name</th>\n      <th>Segment</th>\n      <th>City</th>\n      <th>State</th>\n      <th>Postal Code</th>\n      <th>Region</th>\n      <th>Product ID</th>\n      <th>Category</th>\n      <th>Sub-Category</th>\n      <th>Product Name</th>\n      <th>Sales</th>\n      <th>Quantity</th>\n      <th>Discount</th>\n      <th>Profit</th>\n    </tr>\n    <tr>\n      <th>Row ID</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>CA-2016-152156</td>\n      <td>11/8/2016</td>\n      <td>11/11/2016</td>\n      <td>Second Class</td>\n      <td>CG-12520</td>\n      <td>Claire Gute</td>\n      <td>Consumer</td>\n      <td>Henderson</td>\n      <td>Kentucky</td>\n      <td>42420</td>\n      <td>South</td>\n      <td>FUR-BO-10001798</td>\n      <td>Furniture</td>\n      <td>Bookcases</td>\n      <td>Bush Somerset Collection Bookcase</td>\n      <td>261.96</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>41.9136</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>CA-2016-152156</td>\n      <td>11/8/2016</td>\n      <td>11/11/2016</td>\n      <td>Second Class</td>\n      <td>CG-12520</td>\n      <td>Claire Gute</td>\n      <td>Consumer</td>\n      <td>Henderson</td>\n      <td>Kentucky</td>\n      <td>42420</td>\n      <td>South</td>\n      <td>FUR-CH-10000454</td>\n      <td>Furniture</td>\n      <td>Chairs</td>\n      <td>Hon Deluxe Fabric Upholstered Stacking Chairs,...</td>\n      <td>731.94</td>\n      <td>3</td>\n      <td>0.0</td>\n      <td>219.5820</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>CA-2016-138688</td>\n      <td>6/12/2016</td>\n      <td>6/16/2016</td>\n      <td>Second Class</td>\n      <td>DV-13045</td>\n      <td>Darrin Van Huff</td>\n      <td>Corporate</td>\n      <td>Los Angeles</td>\n      <td>California</td>\n      <td>90036</td>\n      <td>West</td>\n      <td>OFF-LA-10000240</td>\n      <td>Office Supplies</td>\n      <td>Labels</td>\n      <td>Self-Adhesive Address Labels for Typewriters b...</td>\n      <td>14.62</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>6.8714</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [],
    "metadata": {
