Drop 'Customer Name' column

--- a/1SA Final Project US Superstore.ipynb
+++ b/1SA Final Project US Superstore.ipynb
@@ -309,7 +309,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> The dataset is only in the United States. This is also shown in the code above.\n",
+    "> The dataset only includes purchases made in the United States. This is also shown in the code above.\n",
     "> With this knowledge, it is clear that the column is useless and can be removed."
    ],
    "metadata": {
@@ -345,7 +345,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique Customer ID's: 793\n",
+      "Number of unique Customer Name's: 793\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of unique Customer ID's:\", df['Customer ID'].unique().size)\n",
+    "print(\"Number of unique Customer Name's:\", df['Customer Name'].unique().size)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> The number of Customer ID's and names are identical. Additionally, by looking at the\n",
+    "> DataFrame it seems that the customers initials are included in the ID.\n",
+    "> The Customer ID provides a better indication since various customers could have\n",
+    "> the same name. Given that both columns also provide the same information, the\n",
+    "> Customer Name column is unnecessary.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "              Order ID Order Date   Ship Date     Ship Mode Customer ID  \\\nRow ID                                                                    \n1       CA-2016-152156  11/8/2016  11/11/2016  Second Class    CG-12520   \n2       CA-2016-152156  11/8/2016  11/11/2016  Second Class    CG-12520   \n\n         Segment       City     State  Postal Code Region       Product ID  \\\nRow ID                                                                       \n1       Consumer  Henderson  Kentucky        42420  South  FUR-BO-10001798   \n2       Consumer  Henderson  Kentucky        42420  South  FUR-CH-10000454   \n\n         Category Sub-Category  \\\nRow ID                           \n1       Furniture    Bookcases   \n2       Furniture       Chairs   \n\n                                             Product Name   Sales  Quantity  \\\nRow ID                                                                        \n1                       Bush Somerset Collection Bookcase  261.96         2   \n2       Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.94         3   \n\n        Discount    Profit  \nRow ID                      \n1            0.0   41.9136  \n2            0.0  219.5820  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Order ID</th>\n      <th>Order Date</th>\n      <th>Ship Date</th>\n      <th>Ship Mode</th>\n      <th>Customer ID</th>\n      <th>Segment</th>\n      <th>City</th>\n      <th>State</th>\n      <th>Postal Code</th>\n      <th>Region</th>\n      <th>Product ID</th>\n      <th>Category</th>\n      <th>Sub-Category</th>\n      <th>Product Name</th>\n      <th>Sales</th>\n      <th>Quantity</th>\n      <th>Discount</th>\n      <th>Profit</th>\n    </tr>\n    <tr>\n      <th>Row ID</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>CA-2016-152156</td>\n      <td>11/8/2016</td>\n      <td>11/11/2016</td>\n      <td>Second Class</td>\n      <td>CG-12520</td>\n      <td>Consumer</td>\n      <td>Henderson</td>\n      <td>Kentucky</td>\n      <td>42420</td>\n      <td>South</td>\n      <td>FUR-BO-10001798</td>\n      <td>Furniture</td>\n      <td>Bookcases</td>\n      <td>Bush Somerset Collection Bookcase</td>\n      <td>261.96</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>41.9136</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>CA-2016-152156</td>\n      <td>11/8/2016</td>\n      <td>11/11/2016</td>\n      <td>Second Class</td>\n      <td>CG-12520</td>\n      <td>Consumer</td>\n      <td>Henderson</td>\n      <td>Kentucky</td>\n      <td>42420</td>\n      <td>South</td>\n      <td>FUR-CH-10000454</td>\n      <td>Furniture</td>\n      <td>Chairs</td>\n      <td>Hon Deluxe Fabric Upholstered Stacking Chairs,...</td>\n      <td>731.94</td>\n      <td>3</td>\n      <td>0.0</td>\n      <td>219.5820</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dropping 'Customer Name' column\n",
+    "df1.drop(['Customer Name'], axis=1, inplace=True)\n",
+    "# examining the changes\n",
+    "df1.head(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "outputs": [],
    "source": [],
    "metadata": {
