Drop "company" and "agent" columns

--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -159,6 +159,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> In a first observation it is clear some features (for example \"company\",\n",
+    "> and \"agent\") consist of many null values."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -229,11 +239,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "source": [
+    "# further examination of null values\n",
+    "# the methods below calculate the number of missing values\n",
+    "missing_values = df.isna().sum()\n",
+    "missing_values = missing_values[missing_values != 0]\n",
+    "missing_values"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "children         4\ncountry        488\nagent        16340\ncompany     112593\ndtype: int64"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> The \"company\" and \"agent\" columns have a large amount of null values.\n",
+    "> Since they are irrelevant for research they can be removed."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "\n"
+    "# dropping \"company\" and \"agent\" columns\n",
+    "df.drop([\"company\", \"agent\"], axis=1, inplace=True)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
